# dograh

./: BUYER_GUIDE.md  CODECANYON_ASSETS.md  Client_Non_Technical_Deployment_Overview.md  Deployment_And_Integration_Handover.md  India_Telephony_Provider_Recommendation.md  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: collarx-engine-ci.yml  collarx-license-server-ci.yml
api/: .env.example  AGENTS.md  Dockerfile  app.py  constants.py  enums.py  requirements.txt
api/db/: campaign_client.py  organization_usage_client.py
api/routes/: campaign.py  organization.py  organization_usage.py  (+4 more)
collarx-engine/: README.md  pyproject.toml
collarx-engine/src/collarx_engine/campaign/: dispatcher.py  orchestrator.py
collarx-engine/src/collarx_engine/license/: validator.py
collarx-engine/src/collarx_engine/pipeline/: __init__.py  factory.py  runner.py
collarx-engine/src/collarx_engine/plugins/: __init__.py  base.py  registry.py  types.py
collarx-engine/src/collarx_engine/pricing/: __init__.py
collarx-engine/src/collarx_engine/telephony/: __init__.py
collarx-engine/src/collarx_engine/workflow/: __init__.py  engine.py
collarx-license-server/: README.md  pyproject.toml
collarx-license-server/app/: main.py
collarx-license-server/app/templates/: admin.html  admin_login.html
collarx_engine/: __init__.py
docs/: docs.json
scripts/: deploy_no_docker.sh  deploy_production_docker.sh  generate_engine_hash.py  redeploy_production_docker.sh  start_services_dev.sh
ui/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json
(+88 files in other folders)
