[project]
name = "collarx-engine"
version = "0.1.0"
description = "Private core runtime package for Collarx voice AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
]

[project.entry-points."collarx.plugins"]
# Buyer and internal plugins should register here in their own packages.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
